add heading anchors and autolinks

--- a/site/src/styles/global.scss
+++ b/site/src/styles/global.scss
@@ -106,6 +106,15 @@ h4 {
   code {
     font-weight: inherit;
   }
+
+  a {
+    font-weight: inherit;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 h1 {
