add table of contents to pages

--- a/site/src/layout.module.scss
+++ b/site/src/layout.module.scss
@@ -42,7 +42,8 @@ used here.
     grid-column: full;
   }
 
-  &:not(:has(> header)) {
+  &:not(:has(> header)),
+  footer {
     padding-block-start: var(--space5);
   }
 
