--- a/site/src/styles/global.scss
+++ b/site/src/styles/global.scss
@@ -4,8 +4,9 @@
 
 :root {
   // font fam
-  --sans-serif: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --sans-serif: 'Inter', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
   --monospace: 'Source Code Pro', 'JetBrains Mono', Menlo, Monaco, Consolas,
     Courier New, monospace;
 
